--- a/formularz-html/index.html
+++ b/formularz-html/index.html
@@ -31,9 +31,9 @@
 
         <p>Płeć</p>
         <label><input type="radio" name="plec">Kobieta<label>
-                <label><input type="radio" name="plec">Mężczyzna</label><br>
+                <label><input type="radio" name="plec">Mężczyzna</label><br><br>
 
-                <input type="checkbox"> Zgoda na dane osobowe<br>
+                <input type="checkbox"> Zgoda na dane osobowe<br><br>
 
                 <label for="wiadomosc">Wiadomość</label><br>
                 <textarea name="wiadomosc" id="wiadomosc"></textarea><br>
