--- a/1-formularz-html5/index.html
+++ b/1-formularz-html5/index.html
@@ -30,7 +30,7 @@
         </select> <br>
 
         <p>Płeć</p>
-        <label><input type="radio" name="plec">Kobieta<label>
+        <label><input type="radio" name="plec">Kobieta</label>
                 <label><input type="radio" name="plec">Mężczyzna</label><br><br>
 
                 <input type="checkbox"> Zgoda na dane osobowe<br><br>
